Admission form compltete

--- a/Section 1/index.html
+++ b/Section 1/index.html
@@ -76,5 +76,7 @@
     <td>∞</td>
   </tr>
 </table>
+<img src="images.png" alt="pikachu">
+<video width="500px"  autoplay muted controls loop src="https://www.boat-lifestyle.com/cdn/shop/files/quinn_ecywdgk2php34go30fyob4m1.mp4#t=0.1"></video>
 </body>
 </html>
