--- a/Section 1/movieform.html
+++ b/Section 1/movieform.html
@@ -8,24 +8,36 @@
   <h2>Movie Ticket Booking Form</h2>
 
   <form>
-    <label for="movie">Movie Name:</label><br>
-    <input type="text" id="movie" name="movie" placeholder="Enter movie name"><br><br>
 
-    <label for="date">Date:</label><br>
-    <input type="date" id="date" name="date"><br><br>
+    <div>
+      <label for="movie">Movie Name:</label>
+    <input type="text" id="movie" name="movie" placeholder="Enter movie name">
+    </div>
+    
 
-    <label for="time">Time:</label><br>
-    <input type="time" id="time" name="time"><br><br>
+    <div>
+      <label for="date">Date:</label>
+    <input type="date" id="date" name="date">
+    </div>
 
+   <div>
+     <label for="time">Time:</label><br>
+    <input type="time" id="time" name="time">
+   </div>
+   <div>
+    
     <label for="tickets">Number of Tickets:</label><br>
-    <input type="number" id="tickets" name="tickets" min="1" max="10"><br><br>
+    <input type="number" id="tickets" name="tickets" min="1" max="10">
+   </div>
 
-    <label for="category">Seat Category:</label><br>
+    <div>
+      <label for="category">Seat Category:</label>
     <select id="category" name="category">
       <option value="regular">Regular</option>
       <option value="vip">VIP</option>
       <option value="recliner">Recliner</option>
-    </select><br><br>
+    </select>
+    </div>
 
     <input type="submit" value="Book Ticket">
   </form>
