--- a/Section 1/login.html
+++ b/Section 1/login.html
@@ -17,7 +17,8 @@
             padding: 30px;
             box-sizing: border-box;
             box-shadow: 3px 3px 5px 0 black;
-            background-color: white;
+            /* background-color: white; */
+
         }
 
         body{
@@ -25,7 +26,8 @@
             justify-content: center ;
             align-items: center;
             height: 100vh;
-            background-image: linear-gradient(0deg , blueviolet);
+            /* background-image: linear-gradient(0deg , blueviolet); */
+            background-image: url(https://media.istockphoto.com/id/1459373176/vector/abstract-defocused-background-spring-summer-sea.jpg?s=612x612&w=0&k=20&c=P6D1VrXeeKsJfyKzlJeIqxyNXkeYtMb6C1mW6p68xro=);
             
         }
         .form-tittle{
